Fixed text being cut off.

--- a/stylesheet/portfolio.css
+++ b/stylesheet/portfolio.css
@@ -392,7 +392,7 @@ footer {
     padding: 1.6%;
     padding-top: 3%;
     /* This ensures there is space between the top of the column and our headings */
-    height: 450px;
+    height: 500px;
     /* This sets the height of the column to 400px -  this may need to be adjusted depending on the text you enter */
     background-color: #c8d8e4;
     /* Sets the background color of the columns with class Column_1 */
@@ -402,7 +402,7 @@ footer {
     float: left;
     width: 50%;
     padding: 1.6%;
-    height: 450px;
+    height: 500px;
     background-color: #2b6777;
 }
 
